# legislation-watch

./: pyproject.toml
legislation_watch/: generate_report.py  rss_feed_parser.py  utils.py
