[tool.poetry]
name = "legislation-watch"
version = "0.1.0"
description = ""
authors = ["Spencer McMaster <spencerm133@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
feedparser = "^6.0.11"
pydantic = "^2.9.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
